[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-tools-mcp"
version = "0.3.0"
description = "Defense-grade cryptographic compliance tools - FIPS 140-3, CNSA 2.0, Post-Quantum (FIPS 203/204/205), Key Lifecycle (SP 800-57), and Crypto Audit Engine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "cryptography",
    "compliance",
    "fips-140-3",
    "cnsa",
    "post-quantum",
    "pqc",
    "nist",
    "mcp",
    "security",
    "audit",
    "key-management",
    "defense",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
crypto-tools-mcp = "crypto_tools_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_tools_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
